@@ -12,6 +12,8 @@ namespace MonoCov
 			optionSet.Add ("export-xml=", "Export coverage data as XML into specified directory", v => exportXmlDir = v);
 			optionSet.Add ("export-html=", "Export coverage data as HTML into specified directory", v => exportHtmlDir = v);
 			optionSet.Add ("stylesheet=", "Use the specified XSL stylesheet for XML->HTML conversion", v => exportHtmlDir = v);
+			optionSet.Add ("minClassCoverage=", "If a code coverage of a class is less than specified, the application exits with return code 1.", v => float.TryParse(v, out minClassCoverage));
+			optionSet.Add ("minMethodeCoverage=", "If a code coverage of a methode is less than specified, the application exits with return code 1.", v => float.TryParse(v, out minMethodeCoverage));
 			optionSet.Add ("no-progress", "No progress messages during the export process", v => quiet = v != null);
 			optionSet.Add ("h|help", "Show this message and exit", v => showHelp = v != null);			
 		}
@@ -20,6 +22,8 @@ namespace MonoCov
 		public string exportXmlDir;
 		public string exportHtmlDir;
 		public string styleSheet;
+		public float minClassCoverage = -1f;
+		public float minMethodeCoverage = -1f;
 		public bool quiet = false;
 		public bool showHelp = false;
 
