@@ -74,6 +74,14 @@ be good if somebody could contribute a better one :)
 To export the data as HTML, run monocov like this:
 	monocov --export-html=<DEST DIR> <DATA FILE NAME>
 
+You can use this application to track your code coverage as part of your build
+process. To specify a minimum methode coverage of 50% and a minimum class coverage
+of 80%:
+	monocov --minClassCoverage=0.5 minMethodeCoverage=0.8 <DATA FILE NAME>
+
+The application will return an exit code which can be used to determine if all
+classes/methodes have a greater code coverage than specified.
+
 2.5 KNOWN BUGS
 --------------
 
