@@ -12,6 +12,12 @@ Export the coverage data as HTML files in directory DIR.
 .I \-export-xml:DIR
 Export the coverage data as XML files in directory DIR.
 .TP
+.I \-test-class:VALUE
+If a code coverage of a class is less than specified, the application exits with return code 1.
+.TP
+.I \-test-methode:VALUE
+If a code coverage of a methode is less than specified, the application exits with return code 1.
+.TP
 .I \-version
 Print version information.
 .TP
